@@ -1,7 +1,7 @@
 -------------------------------------------------------------
 Developer notes version 1.9.3_beta : Changes since version 1.9.2 :
 -------------------------------------------------------------
-20/10/23 (TRUST) Minor change : Class Groupe_interne becomes Groupe_face as it now supports an arbitrary mix of internal or boundary faces.
+23/10/23 (TRUST) Minor change : Class Groupe_interne becomes Groupe_face as it now supports an arbitrary mix of internal or boundary faces.
 25/09/23 (TRUST) Portability  : OpenMP AMD compiler AOMP is supported (see https://github.com/ROCm-Developer-Tools/aomp/blob/aomp-dev/docs/UBUNTUINSTALL.md how to install)
 20/09/23 (TRUST) For development versions, $TRUST_ROOT/bin/gestion_externalpackages/extp.commit file contains the commit (Id SHA1) of externalpackages compatible with TRUST version
 04/09/23 (TRUST) Major change : Basic turbulence classes (Pbs, equations, nul models) moved from Trio to TRUST for arch code reasons (tests for TRUST Dift operators)
