@@ -143,6 +143,7 @@ fi
 export TRUST_LATAFILTER=$TRUST_LIB/src/LIBLATAFILTER
 export TRUST_ICOCOAPI=$TRUST_LIB/src/LIBICOCOAPI
 export TRUST_MED_ROOT=$TRUST_LIB/src/LIBMED
+export TRUST_HDF5_ROOT=$TRUST_LIB/src/LIBMED # Ajout suite bttrust #227695
 export TRUST_MEDCOUPLING_ROOT=$TRUST_LIB/src/LIBMEDCOUPLING/install
 export TRUST_OSQP_ROOT=$TRUST_LIB/src/LIBOSQP
 # Load MEDCOUPLING and swig (ICoCo python) environment by default
