@@ -4996,6 +4996,7 @@
 <td WIDTH=40%><FONT Size=-1><b>time</b></FONT></td>
 <td WIDTH=20%><FONT Size=-2><A HREF=../References.html#Import_MED TARGET=p>Import_MED</A></FONT></td>
 <td WIDTH=20%><FONT Size=-2><A HREF=../References.html#Champ_front_MED_jdd1 TARGET=p>Champ_front_MED_jdd1</A></FONT></td>
+<td WIDTH=20%><FONT Size=-2><A HREF=../References.html#champ_fonc_med_table_jdd2 TARGET=p>champ_fonc_med_table_jdd2</A></FONT></td>
 </tr>
 <tr valign=top>
 <td WIDTH=40%><FONT Size=-1><b>time_activate_ptot</b></FONT></td>
@@ -5136,6 +5137,8 @@
 <tr valign=top>
 <td WIDTH=40%><FONT Size=-1><b>use_existing_domain</b></FONT></td>
 <td WIDTH=20%><FONT Size=-2><A HREF=../References.html#Champ_front_MED_jdd1 TARGET=p>Champ_front_MED_jdd1</A></FONT></td>
+<td WIDTH=20%><FONT Size=-2><A HREF=../References.html#champ_fonc_med_table_jdd2 TARGET=p>champ_fonc_med_table_jdd2</A></FONT></td>
+<td WIDTH=20%><FONT Size=-2><A HREF=../References.html#champ_fonc_med_table_jdd3 TARGET=p>champ_fonc_med_table_jdd3</A></FONT></td>
 </tr>
 <tr valign=top>
 <td WIDTH=40%><FONT Size=-1><b>use_hydrostatic_pressure</b></FONT></td>
