@@ -181,6 +181,7 @@
 <TR><TD><SMALL><A HREF="#Gaz_pemfc">Gaz_pemfc</A></TD><TD><SMALL># Pb_Hydraulique_Melange_Binaire_WC 3D GAZ PEMFC #</TD></TR>
 <TR><TD><SMALL><A HREF="#Grad_VDF_PolyMAC">Grad_VDF_PolyMAC</A></TD><TD><SMALL># PARALLEL OK #</TD></TR>
 <TR><TD><SMALL><A HREF="#Grad_VDF_corners">Grad_VDF_corners</A></TD><TD><SMALL># PARALLEL OK #</TD></TR>
+<TR><TD><SMALL><A HREF="#Groupe_Faces">Groupe_Faces</A></TD><TD><SMALL># Test Read group of faces from MED file and Raffiner_isotrope #</TD></TR>
 <TR><TD><SMALL><A HREF="#Himp_var">Himp_var</A></TD><TD><SMALL># Thermohydraulique 2D : Conditions limites instationnaires #</TD></TR>
 <TR><TD><SMALL><A HREF="#Hyd_2D_PolyMAC">Hyd_2D_PolyMAC</A></TD><TD><SMALL># Hydraulique 2D laminaire avec "trou" dans le maillage #</TD></TR>
 <TR><TD><SMALL><A HREF="#Hyd_3D_PolyMAC">Hyd_3D_PolyMAC</A></TD><TD><SMALL># Lecture maillage 3D Hexa+Tetra+Pyramide cree dans Salome avec: #</TD></TR>
@@ -1093,6 +1094,9 @@
 <HR><CENTER><B><A NAME=Grad_VDF_corners>Grad_VDF_corners</A></B></CENTER>
 <CENTER># PARALLEL OK #</CENTER>
 <CENTER><a href=../tests/Reference/Grad_VDF_corners/Grad_VDF_corners.data>Edit</a> Grad_VDF_corners.data </CENTER>
+<HR><CENTER><B><A NAME=Groupe_Faces>Groupe_Faces</A></B></CENTER>
+<CENTER># Test Read group of faces from MED file and Raffiner_isotrope #</CENTER>
+<CENTER><a href=../tests/Reference/Groupe_Faces/Groupe_Faces.data>Edit</a> Groupe_Faces.data </CENTER>
 <HR><CENTER><B><A NAME=Himp_var>Himp_var</A></B></CENTER>
 <CENTER># Thermohydraulique 2D : Conditions limites instationnaires #</CENTER>
 <CENTER><a href=../tests/Reference/Himp_var/Himp_var.data>Edit</a> Himp_var.data </CENTER>
